--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-latex",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "React component to render latex strings",
   "homepage": "",
   "repository": "zzish/react-latex",
@@ -17,7 +17,9 @@
     "react",
     "latex",
     "zzish",
-    "component"
+    "component",
+    "react-component",
+    "react-ui"
   ],
   "devDependencies": {
     "babel-core": "^5.5.0",
@@ -31,12 +33,14 @@
     "gulp-nsp": "^0.4.5",
     "gulp-plumber": "^1.0.0",
     "jshint-stylish": "^1.0.0",
-    "react": "^0.13.3",
-    "react-components": "^0.2.0"
+    "react": "^0.13.3"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
     "test": "gulp"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react-components": "^0.2.0"
+  }
 }
