--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-latex",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "React component to render latex strings",
   "homepage": "",
   "repository": "zzish/react-latex",
@@ -12,7 +12,7 @@
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
+  "main": "dist/latex.npm.js",
   "keywords": [
     "react",
     "latex",
@@ -23,8 +23,11 @@
   ],
   "devDependencies": {
     "babel-core": "^5.5.0",
+    "babelify": "^6.1.3",
+    "browserify": "^11.0.1",
     "gulp": "^3.6.0",
     "gulp-babel": "^5.1.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^0.9.0",
     "gulp-jscs": "^1.1.0",
@@ -32,8 +35,11 @@
     "gulp-mocha": "^2.0.0",
     "gulp-nsp": "^0.4.5",
     "gulp-plumber": "^1.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0",
     "jshint-stylish": "^1.0.0",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
@@ -41,6 +47,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "katex": "^0.4.0"
+    "katex": "^0.5.0"
   }
 }
