--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-latex",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "React component to render latex strings",
   "homepage": "",
   "repository": "zzish/react-latex",
@@ -12,7 +12,7 @@
   "files": [
     "dist"
   ],
-  "main": "dist/latex.npm.js",
+  "main": "build/latex.js",
   "keywords": [
     "react",
     "latex",
@@ -21,32 +21,29 @@
     "react-component",
     "react-ui"
   ],
+  "peerDependencies": {
+    "react": "^15.3.0"
+  },
   "devDependencies": {
-    "babel-core": "^5.5.0",
-    "babelify": "^6.1.3",
-    "browserify": "^11.0.1",
-    "gulp": "^3.6.0",
-    "gulp-babel": "^5.1.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-istanbul": "^0.9.0",
-    "gulp-jscs": "^1.1.0",
-    "gulp-jshint": "^1.5.3",
-    "gulp-mocha": "^2.0.0",
-    "gulp-nsp": "2.4.2",
-    "gulp-plumber": "^1.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0",
-    "jshint-stylish": "^1.0.0",
-    "react": "^0.13.3",
-    "vinyl-source-stream": "^1.1.0"
+    "babel-core": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-zzish": "^0.6.1",
+    "mocha": "^3.3.0",
+    "prettier": "^1.2.2",
+    "prop-types": "^15.5.0",
+    "react-dom": "^15.5.4"
   },
   "scripts": {
-    "prepublish": "gulp prepublish",
-    "test": "mocha --compilers js:babel/register"
+    "test": "mocha --compilers js:babel-register",
+    "build": "babel ./src/latex.js --out-file ./build/latex.js",
+    "lint": "eslint ./src/latex.js"
   },
   "license": "MIT",
   "dependencies": {
-    "katex": "^0.5.0"
+    "katex": "^0.7.0"
   }
 }
