--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-ui"
   ],
   "peerDependencies": {
-    "react": "^15.3.0"
+    "react": "^16.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -31,12 +31,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
-    "eslint": "^3.19.0",
-    "eslint-config-zzish": "^0.6.1",
+    "eslint": "^4.14.0",
+    "eslint-config-zzish": "^0.8.0",
     "mocha": "^3.3.0",
     "prettier": "^1.2.2",
     "prop-types": "^15.5.0",
-    "react-dom": "^15.5.4"
+    "react-dom": "^16.2.0"
   },
   "scripts": {
     "test": "mocha --compilers js:babel-register",
@@ -46,6 +46,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "katex": "^0.7.0"
+    "katex": "^0.9.0-alpha2"
   }
 }
