--- a/package.json
+++ b/package.json
@@ -1,51 +1,55 @@
 {
-  "name": "react-latex",
-  "version": "1.0.1",
-  "description": "React component to render latex strings",
-  "homepage": "",
-  "repository": "zzish/react-latex",
-  "author": {
-    "name": "Zzish",
-    "email": "developers@zzish.com",
-    "url": "http://www.zzish.com"
-  },
-  "files": [
-    "build"
-  ],
-  "main": "build/latex.js",
-  "keywords": [
-    "react",
-    "latex",
-    "zzish",
-    "component",
-    "react-component",
-    "react-ui"
-  ],
-  "peerDependencies": {
-    "react": "^16.2.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "eslint": "^4.14.0",
-    "eslint-config-zzish": "^0.8.0",
-    "mocha": "^3.3.0",
-    "prettier": "^1.2.2",
-    "prop-types": "^15.5.0",
-    "react-dom": "^16.2.0"
-  },
-  "scripts": {
-    "test": "mocha --compilers js:babel-register",
-    "build": "mkdir build; babel ./src/latex.js --out-file ./build/latex.js",
-    "lint": "eslint ./src/latex.js",
-    "prepublish": "npm run build"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "katex": "^0.9.0-alpha2"
-  }
+    "name": "react-latex",
+    "version": "1.1.0",
+    "description": "React component to render latex strings",
+    "homepage": "",
+    "repository": "zzish/react-latex",
+    "author": {
+        "name": "Zzish",
+        "email": "developers@zzish.com",
+        "url": "http://www.zzish.com"
+    },
+    "files": [
+        "build"
+    ],
+    "main": "build/latex.js",
+    "keywords": [
+        "react",
+        "latex",
+        "zzish",
+        "component",
+        "react-component",
+        "react-ui"
+    ],
+    "peerDependencies": {
+        "react": "^16.2.0"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.24.1",
+        "babel-core": "^6.24.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-register": "^6.24.1",
+        "eslint": "^4.14.0",
+        "eslint-config-zzish": "^0.8.0",
+        "eslint-plugin-flowtype": "^2.40.1",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-jsx-a11y": "^6.0.3",
+        "eslint-plugin-react": "^7.5.1",
+        "mocha": "^3.3.0",
+        "prettier": "^1.2.2",
+        "prop-types": "^15.5.0",
+        "react-dom": "^16.2.0"
+    },
+    "scripts": {
+        "test": "mocha --compilers js:babel-register",
+        "build": "mkdir build; babel ./src/latex.js --out-file ./build/latex.js",
+        "lint": "eslint ./src/latex.js",
+        "prepublish": "npm run build"
+    },
+    "license": "MIT",
+    "dependencies": {
+        "katex": "^0.8.3"
+    }
 }
