--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
         "react-component",
         "react-ui"
     ],
-    "peerDependencies": {
-        "react": "^16.2.0"
-    },
     "devDependencies": {
         "babel-cli": "^6.24.1",
         "babel-core": "^6.24.1",
@@ -50,6 +47,7 @@
     },
     "license": "MIT",
     "dependencies": {
-        "katex": "^0.9.0"
+        "katex": "^0.10.2",
+        "react": "^16.2.0"
     }
 }
