--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "mocha": "^3.3.0",
         "prettier": "^1.2.2",
         "prop-types": "^15.5.0",
+        "react": "^16.2.0",
         "react-dom": "^16.2.0"
     },
     "scripts": {
@@ -47,7 +48,6 @@
     },
     "license": "MIT",
     "dependencies": {
-        "katex": "^0.10.2",
-        "react": "^16.2.0"
+        "katex": "^0.10.2"
     }
 }
